# novel_pipeline

./: .env.example  .gitattributes  .gitignore  AIRP_ST_ITERATIVE_FEASIBILITY_REPORT_CN.md  FULL_LIVE_NODE1_CODE_REVIEW_AND_DEBUG_PLAN_20260420_CN.md  FULL_LIVE_NODE1_COMPLETION_REPORT_20260420_CN.md  FULL_LIVE_NODE1_CONTROL_PLANE_FIX01_REPORT_20260420_CN.md  FULL_LIVE_NODE1_LOG_ROOT_CAUSE_REPORT_20260420_CN.md  FULL_LIVE_NODE1_PROGRESS_REPORT_20260420_CN.md  FULL_LIVE_NODE1_RUN_REPORT_20260503_CN.md  FULL_LIVE_PHASE2_FORMAL_CHAIN_REPORT_20260421_CN.md  FULL_PIPELINE_TO_RP_BLUEPRINT_CN.md  HYBRID_RAG_FEASIBILITY_AND_IMPLEMENTATION_ROADMAP_CN.md  HYBRID_RAG_IMPLEMENTATION_CHECKLIST_20260419_CN.md  HYBRID_RETRIEVER_AND_CONTRACT_IMPLEMENTATION_REPORT_20260419_CN.md  MINI_LIVE_3BUCKET_WORLD_GRAPH_RUN_REPORT_20260419_CN.md  MODEL_COMPARISON_AND_STYLE_PROMPT_ANALYSIS_CN.md  MULTI_EXPORT_PHASE1_TEST_REPORT_20260516_CN.md  OPEN_SOURCE_HYBRID_RAG_RESEARCH_REPORT_20260419_CN.md  PHASE1_COMPLETION_REVIEW_AND_DEBUG_PLAN_20260421_CN.md  PHASE1_REWORK_REVIEW_AND_TEST_REPORT_20260421_CN.md  PHASE2_ARCH_DECONSTRUCTION_AND_DEKEYWORDIZATION_PLAN_20260421_CN.md  PHASE2_COMMIT_ROLLOUT_CHECKLIST_20260421_CN.md  PHASE2_TRUE_REFACTOR_COMMIT_CHECKLIST.md  PHASE2_TRUE_REFACTOR_WORKFLOW.md  README.md  README_CN.md  STABILITY_NOTES.md  STYLE_BIBLE_EMBEDDING_DENSIFIER_IMPLEMENTATION_REPORT_20260418_CN.md  STYLE_BIBLE_GROUNDING_SCOPEAWARE_REFACTOR_PLAN_CN.md  STYLE_BIBLE_LOCAL_REDUCER_ASSEMBLER_REFACTOR_PLAN_CN.md  STYLE_BIBLE_MINI3_RERUN_REPORT_20260418_CN.md  STYLE_BIBLE_V2_PHASE_0_1_STAGE_REPORT_CN.md  (+15 more)
(+121 files in other folders)
