[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "novel-pipeline"
version = "0.1.0"
description = "OpenAI-compatible novel distillation pipeline for canon, style, and RP assets."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "openai>=1.51.0",
  "pydantic>=2.8.2",
  "python-dotenv>=1.0.1",
]

[project.scripts]
novel-pipeline = "novel_pipeline_stable.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
